yaml/8.ingress/ingress-controller.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
      - name: ssl
        secret:
          secretName: traefik-cert
      - name: config
        configMap:
          name: traefik-conf
      containers:
      - image: harbor.devops.cn:8090/library/traefik:v1.7.2
        name: traefik-ingress-lb
        volumeMounts:
        - mountPath: "/root/django/yaml/8.ingress/ssl/"
          name: "ssl"
        - mountPath: "/root/django/yaml/8.ingress/conf/"
          name: "config"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --configFile=/root/django/yaml/8.ingress/conf/traefik.toml
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --kubernetes.endpoint=http://192.168.101.10:8080
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - protocol: TCP
    port: 80
    name: web
    nodePort: 80
  - protocol: TCP
    port: 443
    name: https
    nodePort: 443
  - protocol: TCP
    port: 8080
    name: admin
